<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_gravity="center"
    android:background="@color/white"
    android:columnCount="4"
    android:rowCount="2"
    tools:context="com.example.adambazzi.drurylane.MainFragment"
    android:layout_height="match_parent">

    <!-- TODO: Update blank fragment layout -->


    <Button
        android:id="@+id/cake"
        android:layout_width="120dp"
        android:layout_height="80dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="80dp"
        android:background="@drawable/button"
        android:text="@string/cake"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@+id/cookies"
        tools:layout_editor_absoluteX="194dp" />

    <Button
        android:id="@+id/donuts"
        android:layout_width="120dp"
        android:layout_height="80dp"
        android:layout_alignParentEnd="true"
        android:layout_alignTop="@+id/cake"
        android:layout_marginEnd="72dp"
        android:layout_marginTop="80dp"
        android:background="@drawable/button"
        android:text="@string/donuts"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/cake"
        app:layout_constraintTop_toBottomOf="@+id/pie" />

    <Button
        android:id="@+id/cookies"
        android:layout_width="120dp"
        android:layout_height="80dp"
        android:layout_alignStart="@+id/cake"
        android:layout_below="@+id/cake"
        android:background="@drawable/button"
        android:text="@string/cookies"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="20sp"
        tools:layout_editor_absoluteX="194dp"
        tools:layout_editor_absoluteY="122dp" />

    <Button
        android:id="@+id/pie"
        android:layout_width="120dp"
        android:layout_height="80dp"
        android:layout_alignBottom="@+id/cookies"
        android:layout_alignStart="@+id/donuts"
        android:layout_marginEnd="72dp"
        android:background="@drawable/button"
        android:text="@string/pie"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/cookies"
        tools:layout_editor_absoluteY="122dp" />
</android.support.constraint.ConstraintLayout>
